# autoencoder-mnist

./: Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
autoencoder_mnist/: config.py  consts.py
autoencoder_mnist/cli/: train.py
autoencoder_mnist/data/: mnist_loader.py
autoencoder_mnist/models/: autoencoder_cnn.py  autoencoder_fc.py  pca.py
autoencoder_mnist/types/: config.py
models/: .gitignore
models/20221206-cnn-2/: config.json  model.ckpt
models/20221206-cnn-3/: config.json  model.ckpt
models/20221206-fc-2/: config.json  model.ckpt
models/20221206-fc-3/: config.json  model.ckpt
models/cnn/lightning_logs/version_0/: events.out.tfevents.1670217126.Nicks-MBP.attlocal.net
models/cnn/lightning_logs/version_0/checkpoints/: epoch=59-step=1800.ckpt
models/cnn/lightning_logs/version_1/: events.out.tfevents.1670218408.Nicks-MBP.attlocal.net
models/cnn/lightning_logs/version_1/checkpoints/: epoch=2-step=81.ckpt
models/cnn/lightning_logs/version_2/: events.out.tfevents.1670218702.Nicks-MBP.attlocal.net
models/cnn/lightning_logs/version_2/checkpoints/: epoch=99-step=2700.ckpt
models/fc/lightning_logs/version_0/: events.out.tfevents.1670218483.Nicks-MBP.attlocal.net
models/fc/lightning_logs/version_0/checkpoints/: epoch=99-step=2700.ckpt
notebooks/: 20221204-nickthegroot-plotting.ipynb
reports/: report.ipynb  report.tex
