[tool.poetry]
name = "autoencoder-mnist"
version = "0.1.0"
description = "Final Project for UCSD COGS 118B: Introduction to Machine Learning II"
authors = ["Nick DeGroot <ndegroot@ucsd.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pandas = "^1.5.2"
torch = "^1.13.0"
scikit-learn = "^1.1.3"
pytorch-lightning = "^1.8.3.post1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
docstr-coverage = "^2.2.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
ipython = "^8.7.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
tqdm = "^4.64.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
src_paths = ["recipe_recommendation", "tests"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
